# fast-ampermeter

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  enable_itm.gdb  flash.gdb  openocd-jlink-f0.cfg  openocd-jlink-f4.cfg
Libs/: CMakeLists.txt
Libs/STM32/: hw_includes.h.in  stm32f0xx_hal_conf.h  stm32f1xx_hal_conf.h  stm32f3xx_hal_conf.h  usbd_conf.h
Libs/nanopb/: CMakeLists.txt  FindNanopb.cmake  protocol.options  protocol.proto
cmake/: CMakeLists.txt  Doxygen.cmake  FindNumPy.cmake  FindSTM32Cube.cmake  FindSTM32CubeF0.cmake  gcc_stm32.cmake  gcc_stm32f0.cmake  gcc_stm32f1.cmake  gcc_stm32f3.cmake  gcc_stm32f4.cmake  gcc_stm32l1.cmake  gcc_stm32l4.cmake  halpers.cmake  stm32_linker.cmake  stm32_linker_F4.cmake
src/: BoardInit.cpp  BoardInit.h  CMakeLists.txt  Debug.h  HidSensorSpec.h  SWO_debug.c  _init.c  cdc_acm.cpp  cdc_acm.h  hardfault.cpp  history.h  ina219.cpp  ina219.h  ina219dma_reader.cpp  ina219dma_reader.h  interrupts_f0.c  interrupts_f4.c  main.cpp  main1.cpp  msp.cpp  result.h  rxmessagereader.cpp  rxmessagereader.h  softreset.c  softreset.h  stubs.c  stubs.cpp  systick.c  txmessagewriter.cpp  txmessagewriter.h  usb_cdc_interface.c  usb_cdc_interface.h  usb_device.c  usb_device.h  usbd_conf.c  usbd_conf.h  usbd_custom_hid_if.c  usbd_customhid.c  usbd_customhid.h  usbd_desc.c
tests/: CMakeLists.txt  RewRead.py  info.py  libfast_ampermeter.py  main.py  pb_basic_test.py  pb_plotter.py  pb_reader.py  plot.py  raw_read.txt
